--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>scala-library</artifactId>
             <version>2.11.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+
+        </dependency>
     </dependencies>
 
     <properties>
